# xilften

./: .env.example  .gitignore  API-SPECIFICATION.md  CLAUDE.md  DATABASE-SCHEMA.md  PHASE1_AUDIO_FOUNDATION_COMPLETE.md  PROGRESS-SUMMARY.md  README.md  START-GUIDE.md  TASK.md  XILFTEN-CONTEXT-ENGINEERING-PROMPT.md  main.py  pyproject.toml  restart.sh  start.sh  stop.sh
agents/: __init__.py
backend/: __init__.py  server.py
backend/mcp/: __init__.py  criteria_analyzer.py  (+1 more)
config/: database.py  settings.py
database/: migrate.py
docs/: AUDIO_VIDEO_IMPLEMENTATION_PLAN.md  AUDIO_VIDEO_PLAN_PERSONA_REVIEWS.md  SOUNDTRACK_SOURCES.md
frontend/: index.html
scripts/: add_classic_movies_for_soundtrack_test.py  add_classics_direct.py  add_classics_via_api.sh  add_movies_for_soundtrack_batch.py  add_source_column_to_soundtracks.py  apply_source_migration.py  audit_media_data.py  create_audio_tables.py  debug_imdb_soundtrack.py  evaluate_movie_criteria.py  expand_persona_data.py  generate_soundtrack_report_via_api.py  import_more_movies.py  ingest_all_soundtracks.py  ingest_all_soundtracks_api.py  load_classic_soundtracks.py  load_demo_albums.py  load_more_soundtracks.py  load_sample_albums.py  load_soundtracks.py  load_soundtracks_api_only.py  load_soundtracks_multi_source.py  load_soundtracks_via_api.py  load_top_grossing_movies.py  populate_3d_criteria.py  seed_audio_genres.py  seed_tmdb_genres.py  soundtrack_health_check.py  soundtrack_source_report.py  sync_genres_from_tmdb.py  test_movie_context_validation.py
tests/: __init__.py  test_movie_detector.py
(+67 files in other folders)
